@@ -21,6 +21,7 @@
  * Using any character to build kpath if no character from the class name can be used.
  * Going through reverse order in console's foreach in case we destroy nodes.
  * Added support for "target" in [zazen] when rendering links.
+ * Fixed kpath propagation to relations on kpath change.
 
 == 1.2.0, 1.2.1 2012-05-01
 
